--- a/client/styles/z-media-queries.css
+++ b/client/styles/z-media-queries.css
@@ -1,3 +1,10 @@
+@media only screen and (max-device-width: 1024px) {
+    .center-block {
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
+}
+
 @media only screen and (max-device-width: 480px) {
     body {
         overflow: visible;
@@ -52,10 +59,6 @@
     }
 
     #content-wrapper {
-        width: auto;
-    }
-
-    .middle-section {
         width: auto;
     }
 
@@ -141,10 +144,6 @@
         padding-right: 1em;
         padding-top: 0.1em;
         padding-bottom: 0.1em;
-    }
-
-    .middle-section {
-        margin-top: 0;
     }
 
     .top-line {
