--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -64,15 +64,15 @@
             </div>
             <div class="enter"></div>
             <ul class="menu clearfix">
-                <li><a href="#"><span>All</span></a></li>
-                <li><a href="#category/world"><span>World</span></a></li>
-                <li><a href="#category/politics"><span>Politics</span></a></li>
-                <li><a href="#category/social"><span>Social</span></a></li>
-                <li><a href="#category/economics"><span>Economics</span></a></li>
-                <li><a href="#category/sport"><span>Sport</span></a></li>
-                <li><a href="#category/science"><span>Science</span></a></li>
-                <li><a href="#category/tech"><span>Technology</span></a></li>
-                <li><a href="#category/culture"><span>Culture</span></a></li>
+                <li class="menu-item"><a href="#"><span>All</span></a></li>
+                <li class="menu-item"><a href="#category/world"><span>World</span></a></li>
+                <li class="menu-item"><a href="#category/politics"><span>Politics</span></a></li>
+                <li class="menu-item"><a href="#category/social"><span>Social</span></a></li>
+                <li class="menu-item"><a href="#category/economics"><span>Economics</span></a></li>
+                <li class="menu-item"><a href="#category/sport"><span>Sport</span></a></li>
+                <li class="menu-item"><a href="#category/science"><span>Science</span></a></li>
+                <li class="menu-item"><a href="#category/tech"><span>Technology</span></a></li>
+                <li class="menu-item"><a href="#category/culture"><span>Culture</span></a></li>
             </ul>
             <div class="top-line clearfix tip-of-the-day">
                 <div class="allocation">
