--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -1,5 +1,9 @@
 <h2 class="name-news"><a>{{{ processedTitle }}}</a></h2>
-<span class="original-article-link">Original&nbsp;article:&nbsp;<a href="{{{ link }}}" target="_blank">{{{ originalArticleLink }}}</a></span>&nbsp;&mdash;&nbsp;{{ formattedDate }}
+<p>
+    <span class="original-article-link">Original&nbsp;article:&nbsp;
+        <a href="{{{ link }}}" target="_blank">{{{ originalArticleLink }}}</a>
+    </span>&nbsp;&mdash;&nbsp;{{ formattedDate }}
+</p>
 <a href="#"><blockquote class="newsinform">{{ name }}</blockquote></a>
 {{#if image}}
     <a class="illustration" style="background-image: url('{{ image }}')" onclick="counter.reachGoal('inside-article')"></a>
