--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -9,10 +9,10 @@
     <a class="illustration" style="background-image: url('{{ image }}')" onclick="counter.reachGoal('inside-article')"></a>
 -{{/if}}
 <div class="news-text-holder">
-    <p class="news">
-        {{{ processedDescription }}}
+    <p class="news episode-description">
+        {{{ processedDescription }}}...
         {{#if processedBody}}
-            <a class="episode-more">More...</a>
+            <a class="episode-more">More</a>
         {{/if}}
     </p>
     <p class="news episode-body hidden">
