--- a/client/templates/dictionary-section.hbs
+++ b/client/templates/dictionary-section.hbs
@@ -30,8 +30,10 @@
     </select>
 </div>
 <div class="clearfix"></div>
-<div class="dictionary ">
-    <div class="text-block"></div>
-    <div class="word-delete top">Delete selected</div>
-    <div class="word-cancel top">Cancel</div>
+<div class="dictionary-wrapper">
+    <div class="dictionary">
+        <div class="text-block"></div>
+        <div class="word-delete top">Delete selected</div>
+        <div class="word-cancel top">Cancel</div>
+    </div>
 </div>
