--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1076,15 +1076,12 @@ p{
 	margin-top: 9px;
 }
 
-.dictionary:first-child{
-
-	border-top: 1px solid #F7F7F7;
-	border-bottom: 1px dashed #5D5D5D;
-	margin-left: 10px;
+.transcription-f:last-child{
+	 margin-bottom: 2em;
 }
-.dictionary:last-child{
-	border-bottom: solid 1px #999999;
-	margin-bottom: 50px;
+
+.dictionary:first-child{
+	margin-left: 10px;
 }
 
 .transcription h5:first-child{
