--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,28 +40,6 @@
                     <a href="/auth/twitter" class="login-m">Twitter</a>
                 {{/if}}
             </div>
-            <div class="sign-bg">
-                <div class="sign">
-                    <div class="sign-in">Sign In</div>
-                    <div class="sign-up">Sign Up</div>
-                    <div class="social">
-                        <button class="fb-btn sign-btn"><span class="btn-text-first">Sign in with Facebook</span></button>
-                        <button class="tw-btn sign-btn"><span class="btn-text">Sign in with Twitter</span></button>
-                        <button class="gg-btn sign-btn"><span class="btn-text">Sign in with Google</span></button>
-                        <button class="ggw-btn sign-btn"><span class="btn-text">Sign in with Google</span></button>
-                    </div>
-                    <div class="or-icon"><span>or</span></div>
-                    <div class="login-m-form">
-                        <form action="/echo" method='post'>
-                            <input type="text" class="login-m-form-login" placeholder="Login">
-                            <input type="password" class="login-m-form-password" placeholder="Password">
-                            <a href="" class="login-m-form-restore">Forgot password?</a>
-                        </form>
-                    </div>
-                    <div class="sign-login">Login</div>
-                    <div class="sign-close">Close</div>
-                </div>
-            </div>
             <div class="enter"></div>
             <ul class="menu clearfix">
                 <li class="menu-item"><a href="#"><span>All</span></a></li>
@@ -82,7 +60,9 @@
         </div>
         <div class="center-block">
             <div class="center-content clearfix"></div>
-            <div class="dictionaries-section clearfix"></div>
+            <div class="dictionaries-section clearfix">
+            </div>
+
         </div>
         <div class="showsettings"><span class="showspan">Show my translations</span></div>
         <script src="/js/myapp.js"></script>
