--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1585,6 +1585,11 @@ input[type=range]::-webkit-slider-runnable-track {
 	width: 310px;
 	bottom: 0;
 }
+.dictionaries-holder {
+	width: 100%;
+	height: 100%;
+	background: white;
+}
 .dict-title h3 {
   font: 14px 'Helvetica-Bold', sans-serif;
   text-transform: none;
