--- a/client/templates/login.hbs
+++ b/client/templates/login.hbs
@@ -10,7 +10,8 @@
         <form method='post'>
             <input type="text" name="username" class="login-m-form-login login-input" placeholder="Email">
             <input type="password" name="password" class="login-m-form-password password-input" placeholder="Password">
-            <a href="" class="login-m-form-restore">Forgot password?</a>
+            <div class="form-error hidden"></div>
+            <a class="login-m-form-restore">Forgot password?</a>
         </form>
     </div>
     <div class="sign-login">Login</div>
