--- a/client/templates/register.hbs
+++ b/client/templates/register.hbs
@@ -11,6 +11,7 @@
             <input type="text" name="username" class="login-m-form-login login-input" placeholder="Email">
             <input type="password" name="password" class="login-m-form-password password-input" placeholder="Password">
             <input type="password" class="login-m-form-password password-confirm-input" placeholder="Password again">
+            <div class="form-error hidden"></div>
         </form>
     </div>
     <div class="sign-login">Sign up</div>
