--- a/client/templates/dictionary-word.hbs
+++ b/client/templates/dictionary-word.hbs
@@ -1,6 +1,6 @@
 <div class="transcription-f">
-     <input type="checkbox" class="dict-checkbox" id="{{id}}" value="{{phrase}}">
-     <label for="{{id}}">
+     <input type="checkbox" class="dict-checkbox" id="{{_id}}" value="{{phrase}}">
+     <label for="{{_id}}">
          <div class="tr-words">
              <span class="transition-word">{{phrase}}</span>
              <span class="transcription-word">[{{transcription}}]</span>
