restore password; valid mailer

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1425,7 +1425,7 @@ background: #eeeeee;
 }
 .form-error {
 	color: red;
-	margin-bottom: 15px;
+	padding-bottom: 10px;
 }
 .hidden {
 	display: none;
