--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -66,36 +66,21 @@
 
         </div>
         <div class="showsettings"><span class="showspan">Show my translations</span></div>
-        <script src="/js/myapp.js"></script>
-
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-        (function (d, w, c) {
-            (w[c] = w[c] || []).push(function() {
-                try {
-                    w.yaCounter26600358 = new Ya.Metrika({id:26600358,
-                            webvisor:true,
-                            clickmap:true,
-                            trackLinks:true,
-                            accurateTrackBounce:true});
-
-                    w.counter = w.yaCounter26600358;
-                } catch(e) { }
-            });
-
-            var n = d.getElementsByTagName("script")[0],
-                s = d.createElement("script"),
-                f = function () { n.parentNode.insertBefore(s, n); };
-            s.type = "text/javascript";
-            s.async = true;
-            s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
-
-            if (w.opera == "[object Opera]") {
-                d.addEventListener("DOMContentLoaded", f, false);
-            } else { f(); }
-        })(document, window, "yandex_metrika_callbacks");
+        <!-- Yandex.Metrika counter -->
+        <script src="https://mc.yandex.ru/metrika/watch.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            try {
+                var yaCounter36871255 = new Ya.Metrika({
+                    id:36871255,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true
+                });
+                window.yaCounter = yaCounter36871255;
+            } catch(e) { }
         </script>
-    <noscript><div><img src="//mc.yandex.ru/watch/26600358" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    <!-- /Yandex.Metrika counter -->
+        <noscript><div><img src="https://mc.yandex.ru/watch/36871255" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+        <!-- /Yandex.Metrika counter -->
+        <script src="/js/myapp.js"></script>
     </body>
 </html>
