--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -65,7 +65,9 @@
             </div>
 
         </div>
-        <div class="showsettings"><span class="showspan">Show my translations</span></div>
+        <div class="showsettings">
+
+        </div>
         <!-- Yandex.Metrika counter -->
         <script src="https://mc.yandex.ru/metrika/watch.js" type="text/javascript"></script>
         <script type="text/javascript">
