--- a/client/styles/z-media-queries.css
+++ b/client/styles/z-media-queries.css
@@ -224,4 +224,18 @@
         height: 60%;
         vertical-align: sub;
     }
+
+    .dictionaries-section.show {
+        display: block;
+        position: fixed;
+        z-index: 9999;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        width: 100%;
+    }
 }
