--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1809,3 +1809,7 @@ input[type=range]::-webkit-slider-runnable-track {
     border-bottom: solid 1px transparent;
     cursor: pointer;
 }
+
+.dict-title-close {
+	display: none;
+}
