--- a/client/styles/z-media-queries.css
+++ b/client/styles/z-media-queries.css
@@ -238,4 +238,16 @@
         height: 100%;
         width: 100%;
     }
+
+    .dict-title h3 {
+        line-height: 2.5em;
+        font-size: 1.5em;
+    }
+
+    .dict-title-close {
+        display: block;
+        position: absolute;
+        right: 0.5em;
+        top: 0.5em;
+    }
 }
