--- a/client/templates/dictionary-section.hbs
+++ b/client/templates/dictionary-section.hbs
@@ -1,5 +1,5 @@
 <div class="dict-title">
-    <h3>My dictionaries</h3>
+    <h3>My dictionaries<img class="dict-title-close" src="/img/close.png"/></h3>
 </div>
 <div class="functions">
     <div class="dict__setting">
