--- a/client/styles/z-media-queries.css
+++ b/client/styles/z-media-queries.css
@@ -1,7 +1,6 @@
 @media only screen and (max-device-width: 1024px) {
     .center-block {
-        overflow-x: hidden;
-        overflow-y: scroll;
+        overflow: hidden;
     }
 
     .main-header {
