--- a/client/styles/z-media-queries.css
+++ b/client/styles/z-media-queries.css
@@ -1,6 +1,7 @@
 @media only screen and (max-device-width: 1024px) {
     .center-block {
-        overflow: hidden;
+        overflow-x: hidden;
+        overflow-y: scroll;
     }
 
     .main-header {
