--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
         <link href="/css/myapp.css" rel="stylesheet">
     </head>
     <body>
+    <div>
         <div class="popup-wrapper">
             <div class="functions-language">
             </div>
@@ -79,5 +80,6 @@
         <noscript><div><img src="https://mc.yandex.ru/watch/36871255" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
         <!-- /Yandex.Metrika counter -->
         <script src="/js/myapp.js"></script>
+    </div>
     </body>
 </html>
