add h1 episode-more

--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -1,4 +1,4 @@
-<h2 class="name-news"><a>{{{ processedTitle }}}</a></h2>
+<h2 class="name-news episode-more"><a>{{{ processedTitle }}}</a></h2>
 <p>
     <span class="original-article-link">Original&nbsp;article:&nbsp;
         <a href="{{{ link }}}" target="_blank">{{{ originalArticleLink }}}</a>
